--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ Jinja2 = "==3.0.2"
 MarkupSafe = "==2.0.1"
 PyMySQL = "==1.0.2"
 Werkzeug = "==2.0.2"
+flask-restful = "*"
+pymongo = {extras = ["srv"], version = "*"}
 
 [dev-packages]
 
