--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ PyMySQL = "==1.0.2"
 Werkzeug = "==2.0.2"
 flask-restful = "*"
 pymongo = {extras = ["srv"], version = "*"}
+pydrive = "*"
 
 [dev-packages]
 
